@@ -1,4 +1,5 @@
-# Configure script for gcc/ada/Makefile.in, which builds libada and gnattools.
+# Configure script for gcc/ada/Makefile.in, which builds libada,
+# and gcc/ada/Make-tools.in, which builds gnattools.
 
 #Copyright 1994-2004 Free Software Foundation, Inc.
 
@@ -25,7 +26,7 @@
 AC_PREREQ(2.59)
 AC_INIT
 AC_CONFIG_SRCDIR(calendar.ads)
-AC_CONFIG_FILES(Makefile)
+AC_CONFIG_FILES(Makefile Make-tools)
 
 AC_CANONICAL_BUILD
 AC_CANONICAL_HOST
